libcaldav (0.4.2)
  * Fix bug so that SSL specific settings are actually used.
    Close bug 2971096.
  * Fix bug so is-caldav and options are handled correct
  * Applied help for new SSL settings to test application

-- Michael Rasmussen <mir@datanom.net>  Sat, 27 Mar 2010 03:27:03 +0100

libcaldav (0.4.1)
  * Fix bug so that SSL specific errors are handled properly.
    Close bug 2963143.
  * Add option to build script to disable/enable building of
    API documentation. Default is disabled.
  * More cleaning up of the build system.
  * Fix compile time warnings caused by gcc4.4 and minor change in
    libcurl API.
  * Add option to disable verification of peer's certificate
  * Add option to specify custom CA cert file

-- Michael Rasmussen <mir@datanom.net>  Sat, 7 Mar 2010 09:06:24 +0100

libcaldav (0.4.0)
  * Extend test client to be able to use both http and https
  * Clean up some build instructions

-- Michael Rasmussen <mir@datanom.net>  Sat, 27 Feb 2010 12:06:24 +0100

libcaldav (0.3.1)
  * Add https support
  * make the useragent a configurable string, as some server doesn't like
   'curl'

-- Emmanuel Blindauer <e.blindauer@gmail.com> Fri Feb 26 20:49:16 CET 2010


libcaldav (0.3.0)
  * This version implements locking if the server supports this. Locking
  will be done every time a request for modify or delete is sent to the
  server
  * 1) In ICalendar all plain text is wrapped inside DTD CDATA elements
  * 2) ICalendar does not support collations for text-match in which case
  collations has been removed from request - default is i;ascii-casemap anyhow

-- Michael Rasmussen <mir@datanom.net>  Thu, 08 Apr 2008 00:06:24 +0100

libcaldav (0.2.0)

  * This version is a maintenance release due to important bugs.
  * 1) Bugs found in XML which produced incorrect requests corrected
  * 2) Added an option to configure to request dynamic or static library
  * 3) Build system clean up
  * 4) Discovered possible null pointers in error messages which is now