@@ -120,7 +120,7 @@ gboolean caldav_getall(caldav_settings* settings, caldav_error* error) {
 	if (settings->verify_ssl_certificate)
 		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 2);
 	else
-		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 0);
+		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYPEER, 0);
 	if (settings->custom_cacert)
 		curl_easy_setopt(curl, CURLOPT_CAINFO, settings->custom_cacert);
 	/* send all data to this function  */
@@ -225,7 +225,7 @@ gboolean caldav_getrange(caldav_settings* settings, caldav_error* error) {
 	if (settings->verify_ssl_certificate)
 		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 2);
 	else
-		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 0);
+		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYPEER, 0);
 	if (settings->custom_cacert)
 		curl_easy_setopt(curl, CURLOPT_CAINFO, settings->custom_cacert);
 	curl_easy_setopt(curl, CURLOPT_HTTPHEADER, http_header);
